# RetroEdit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  quickfox.txt
Docs/: RetroDocWriter.md  RetroEdit.md  build_command.md  claude-commands.md.txt  lorem.txt  lorem.txt.retroedit
apps/retrodocwriter/: CMakeLists.txt
apps/retrodocwriter/src/app/: Application.cpp  Application.h
apps/retrodocwriter/src/editor/: CharStyle.h  FormattedTextBuffer.cpp  FormattedTextBuffer.h  RichFileDocument.cpp  RichFileDocument.h  RichUndoHistory.cpp  RichUndoHistory.h  RtfReader.cpp  RtfReader.h  RtfWriter.cpp  RtfWriter.h
apps/retrodocwriter/src/render/: WysiwygRenderer.cpp  WysiwygRenderer.h
apps/retrodocwriter/src/ui/: MenuDefs.h  RetroUi.cpp  RetroUi.h
apps/retroedit/: CMakeLists.txt
apps/retroedit/src/: main.cpp
apps/retroedit/src/app/: Application.cpp  Application.h
apps/retroedit/src/render/: EditorRenderer.cpp  EditorRenderer.h
apps/retroedit/src/ui/: MenuDefs.h  RetroUi.cpp  RetroUi.h
core/: CMakeLists.txt
core/editor/: CharStyle.h  Dictionary.gen.h  Dictionary.h  FileDocument.cpp  FileDocument.h  FileSettings.cpp  FileSettings.h  Palette.cpp  Palette.h  Selection.h  UndoHistory.cpp  Utf8.h
core/platform/: AppData.cpp  Print.cpp  Print.h  Window.cpp  Window.h
core/render/: FontFace.h  FontSettings.h  GlyphCache.cpp  GlyphCache.h  RetroRenderer.cpp  ScreenBuffer.cpp  Theme.cpp  Theme.h
src/app/: Application.cpp  Application.h  Cursor.h
src/editor/: Dictionary.cpp  TextBuffer.cpp  TextBuffer.h  UndoHistory.h  WordCount.cpp  WordCount.h  WordWrap.h
src/platform/: AppData.h  AssetPath.h  Beep.cpp  Beep.h  Print.cpp  Print.h  Window.cpp
src/render/: Color.h  FontFace.h  GlyphCache.cpp  GlyphCache.h  RetroRenderer.cpp  RetroRenderer.h  ScreenBuffer.h  Theme.h  WysiwygRenderer.cpp  WysiwygRenderer.h
src/ui/: Layout.h  MenuDefs.h  RetroUi.cpp  RetroUi.h
tools/: gen_dictionary.ps1
